# view-of-delft-prediction-devkit

./: Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
docs/: benchmark_instructions.md  faqs.md  installation.md  instructions_lidarseg.md  instructions_nuimages.md  instructions_nuscenes.md  schema_nuimages.md  schema_nuscenes.md  schema_vod.md
python-sdk/tutorials/: prediction_tutorial.ipynb  vod_tutorial.ipynb
python-sdk/vod/: __init__.py  vod.py
python-sdk/vod/can_bus/: README.md  can_bus_api.py
python-sdk/vod/eval/common/: config.py  loaders.py
python-sdk/vod/eval/detection/: data_classes.py  evaluate.py  render.py
python-sdk/vod/eval/detection/tests/: test_evaluate.py  test_loader.py  test_utils.py
python-sdk/vod/eval/lidarseg/: README.md  validate_submission.py
python-sdk/vod/eval/panoptic/: README.md  get_panoptic_from_seg_det_or_track.py  panoptic_track_evaluator.py
python-sdk/vod/eval/prediction/: README.md  compute_metrics.py  data_classes.py  metrics.py  splits.py
python-sdk/vod/eval/prediction/submission/: do_inference.py
python-sdk/vod/eval/prediction/tests/: test_dataclasses.py  test_metrics.py
python-sdk/vod/eval/tracking/: README.md  algo.py  constants.py  data_classes.py  evaluate.py  metrics.py
python-sdk/vod/eval/tracking/tests/: scenarios.py  test_algo.py
python-sdk/vod/lidarseg/: class_histogram.py
python-sdk/vod/map_expansion/: arcline_path_utils.py  utils.py
python-sdk/vod/map_expansion/tests/: test_all_maps.py
python-sdk/vod/panoptic/: panoptic_utils.py
python-sdk/vod/prediction/input_representation/: agents.py  static_layers.py  utils.py
python-sdk/vod/prediction/input_representation/tests/: test_agents.py  test_combinators.py
python-sdk/vod/prediction/models/: covernet.py  mtp.py  physics.py
python-sdk/vod/prediction/tests/: run_image_generation.py  run_mtp.py  test_backbone.py  test_mtp.py  test_physics_models.py
python-sdk/vod/scripts/: export_egoposes_on_map.py  export_kitti.py  export_pointclouds_as_obj.py
python-sdk/vod/tests/: assert_download.py  test_lidarseg.py  test_predict_helper.py  test_vod.py
python-sdk/vod/utils/: color_map.py  data_io.py  geometry_utils.py  kitti.py  splits.py
python-sdk/vod/utils/tests/: test_data_classes.py  test_geometry_utils.py
setup/: Dockerfile  Jenkinsfile  requirements.txt  setup.py
setup/requirements/: requirements_base.txt
src/vod/: vod.py
src/vod/eval/common/: data_classes.py  render.py  utils.py
src/vod/eval/detection/: README.md  algo.py  config.py  constants.py  utils.py
src/vod/eval/detection/tests/: test_algo.py  test_data_classes.py  test_loader.py
src/vod/eval/lidarseg/: evaluate.py  render.py  utils.py
src/vod/eval/panoptic/: baselines.py  evaluate.py  panoptic_seg_evaluator.py  utils.py
src/vod/eval/prediction/: baseline_model_inference.py  config.py
src/vod/eval/prediction/docker_container/: README.md
src/vod/eval/prediction/tests/: test_metrics.py
src/vod/eval/tracking/: loaders.py  mot.py  render.py  utils.py
src/vod/eval/tracking/tests/: test_evaluate.py
src/vod/lidarseg/: lidarseg_utils.py
src/vod/map_expansion/: arcline_path_utils.py  bitmap.py  map_api.py
src/vod/map_expansion/tests/: test_arcline_path_utils.py
src/vod/panoptic/: generate_panoptic_labels.py
src/vod/prediction/: __init__.py  helper.py
src/vod/prediction/input_representation/: agents.py  combinators.py  interface.py  static_layers.py
src/vod/prediction/models/: backbone.py
src/vod/prediction/tests/: run_covernet.py  test_covernet.py  test_mtp_loss.py  test_physics_models.py  test_predict_helper.py
src/vod/scripts/: export_2d_annotations_as_json.py  export_instance_videos.py  export_poses.py  export_scene_videos.py
src/vod/tests/: test_predict_helper.py  test_vod.py
src/vod/utils/: data_classes.py  map_mask.py  splits.py
src/vod/utils/tests/: test_data_classes.py  test_map_mask.py
tutorials/: prediction_tutorial.ipynb
(+4 files in other folders)
